--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,7 +22,12 @@ body{
   box-sizing: border-box;
   font-family: 'Avenir-Medium','Courier New', Courier, monospace;
   font-size: 16px;
-  background-color: var(--colorSecondary);
+  background-color: var(--colorSecondary );
+}
+
+img{
+  max-width: 100%;
+  max-height: 100%;
 }
 
 
